--- a/views/index.pug
+++ b/views/index.pug
@@ -4,26 +4,22 @@ html
       block head
         title="Express Starter App"
         link(rel='stylesheet' href='/stylesheets/index.css')
+        script(src="/javascripts/index.js" type="module" defer)
   body
       block content
         include utils.pug
-
-        append head
-          //- add page specific styles by appending to the head
-          link(rel="stylesheet" href="/stylesheets/index.css")
-          //- add page specific js
-          script(src="/javascripts/index.js" type="module" defer)
-
-        block content
-          div#splash
-            h1 Login
-            +validationErrorSummary(errors)
-            form(action='/users/login' method='post')
-              input(type='hidden' name='_csrf' value=csrfToken)
-              +field('', 'username', user.username, placeholder = "Username")
-              br
-              +field('', 'password', '', 'password', placeholder = "Password")
-              div#splashbutton
-                button(type='submit') Login
-              div#splashbutton
-                p: a(href='/users/signup') Don't have an account?
+        div#splash
+          h1 Login
+          +validationErrorSummary(errors)
+          form(action='/users/login' method='post')
+            input(type='hidden' name='_csrf' value=csrfToken)
+            +field('', 'username', user.username, placeholder = "Username")
+            br
+            +field('', 'password', '', 'password', placeholder = "Password")
+            div#splashbutton
+              button(type='submit') Login
+            div#splashbutton
+          form(action='/users/loginDemo' method='post')
+              button(type='submit') Demo
+          div#splashbutton
+            p: a(href='/users/signup') Don't have an account?
