added the edit button for a single question on the single question page

--- a/views/singleQuestion.pug
+++ b/views/singleQuestion.pug
@@ -13,9 +13,9 @@ block content
           form(action=`/questions/${question.id}/delete` method="post")
             input(type="hidden" name="_csrf" value=csrfToken)
             button(id=`question-delete-${question.id}` type="submit").single-question-delete-button Delete
-              //- form(action=`/questions/${question.id}/edit` method='POST')
-            //-   input(type='hidden' name='_csrf' value=csrfToken)
-            //-   button(id=`question-edit-${question.id}` type="submit").edit-btn Edit
+          form(action=`/questions/${question.id}/edit` method='get')
+            input(type='hidden' name='_csrf' value=csrfToken)
+            button(id=`question-edit-${question.id}` type="submit").edit-btn Edit
               //- edit form for the single question on single question page
     div#answer-box
       form(action=`/questions/${question.id}` method='post')
