--- a/views/singleQuestion.pug
+++ b/views/singleQuestion.pug
@@ -16,7 +16,7 @@ block content
           form(action=`/questions/${question.id}/edit` method='get')
             input(type='hidden' name='_csrf' value=csrfToken)
             button(id=`question-edit-${question.id}` type="submit").edit-btn Edit
-              //- edit form for the single question on single question page
+            //- edit form for the single question on single question page
     div#answer-box
       form(action=`/questions/${question.id}` method='post')
        input(type='hidden' name='_csrf' value=csrfToken)
@@ -36,6 +36,10 @@ block content
           div.edit-delete
             if userId === answer.User.id
               button(id=`answer-delete-${answer.id}` type="submit").delete-ans-btn Delete
+                form(action=`/answers/${answer.id}/edit` method='get')
+                  input(type='hidden' name='_csrf' value=csrfToken)
+                  button(id=`answer-edit-${answer.id}` type="submit").edit-btn Edittt
+              //- need to edit this route for edit a answer and just edit button
 
 
       //- div.edit-delete
