--- a/views/newQuestion.pug
+++ b/views/newQuestion.pug
@@ -11,7 +11,7 @@ block content
         div
           label(for='title')
           br
-          textarea.title-content(name='title' value=title required, placeholder='Start your question with "What", "How", "Why", etc.')
+          textarea.title-content(name='title' value=title required placeholder='Start your question with "What", "How", "Why", etc.')
           br
         div
           label(for='content')
