--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -223,7 +223,7 @@ select {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   font-size: 12px;
-  width: 100px;
+  width: 135px;
   color: grey;
   border: 1px solid #fff;
 }
@@ -326,7 +326,7 @@ label {
 
 }
 
-.delete-btn, .delete-ans-btn {
+.delete-btn, .delete-ans-btn, .delete-cmt-btn {
   border-radius: 4px;
   border: 0px;
   /* background-color: white; */
