--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
       block head
-        title="Express Starter App"
+        title="ASKMOM&DAD"
         link(rel='stylesheet' href='/stylesheets/index.css')
         script(src="/javascripts/index.js" type="module" defer)
   body
