--- a/views/edit-answer.pug
+++ b/views/edit-answer.pug
@@ -4,7 +4,7 @@ include utils.pug
 
 block content
   div#new-question
-    h1 Edit a Answer
+    span.userisasking Edit a Answer
     form(action=`/answers/${answer.id}/edit` method='post')
       input(type='hidden' name='_csrf' value=csrfToken)
       label(for='content') Answer
