--- a/views/singleQuestion.pug
+++ b/views/singleQuestion.pug
@@ -38,7 +38,7 @@ block content
               button(id=`answer-delete-${answer.id}` type="submit").delete-ans-btn Delete
                 form(action=`/answers/${answer.id}/edit` method='get')
                   input(type='hidden' name='_csrf' value=csrfToken)
-                  button(id=`answer-edit-${answer.id}` type="submit").edit-btn Edittt
+                  button(id=`answer-edit-${answer.id}` type="submit").edit-btn Edit
               //- need to edit this route for edit a answer and just edit button
 
 
