--- a/views/edit-question.pug
+++ b/views/edit-question.pug
@@ -7,7 +7,7 @@ include utils.pug
 block content
   //- +validationErrorSummary(errors)
   div#new-question.postQuestion
-    span.userisasking Edit question
+    span.userisasking Edit Question
     form(action=`/questions/${question.id}/edit` method='post')
       input(type='hidden' name='_csrf' value=csrfToken)
       div
