reversed comment css edits

--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -379,7 +379,7 @@ label {
 }
 
 .comment-post {
-  width: 475px;
+  width: 450px;
   display: inline-block;
   align-content: center;
   justify-content: center;
@@ -389,9 +389,10 @@ label {
   padding: 10px;
   /* margin: 3px; */
   font-weight: lighter;
-  background: #e7e8e9;
+  background: white;
   box-sizing: border-box;
   border-radius: 3px;
+  margin-left: 25px;
 }
 
 .commentdeletebuttons {
@@ -408,21 +409,6 @@ label {
   margin: 3px;
 }
 
-.comment-container {
-  width: 510px;
-  padding: 10px;
-  background-color: #e7e8e9;
-  border: 1px solid rgb(204, 204, 204);
-  border-radius: 3px;
-  margin: 3px;
-  font-size: 11px;
-}
-
-.allCommentsBox {
-  width: 538px;
-  padding: 10px;
-  background-color: #dee0e1;
-}
 
 #errors {
   box-sizing: border-box;
