--- a/views/singleAnswer.pug
+++ b/views/singleAnswer.pug
@@ -2,9 +2,10 @@ extends layout
 include utils
 block content
   +validationErrorSummary(errors)
-  div.answer-container
+  div#question-box.post
     img.user-icon(src='../stylesheets/userIcon.jpg')
     span.span-css= answer.User.username
+    span.phrase-css= 'answered'
     span.answer-post= answer.content
     div.edit-delete
       if userId === answer.User.id
@@ -24,10 +25,11 @@ block content
     div.answer-container(id=`comment-container-${comment.id}`)
       img.user-icon(src='../stylesheets/userIcon.jpg')
       span.span-css= comment.User.username
+      span.phrase-css= 'commented'
       span.answer-post= comment.content
-    div.edit-delete
-      if userId === comment.User.id
-      button(id=`comment-delete-${comment.id}` type="submit").delete-cmt-btn.edit-btn Delete
-      form(action=`/comments/${comment.id}/edit` method='get')
-        input(type='hidden' name='_csrf' value=csrfToken)
-        button(id=`comment-edit-${comment.id}` type="submit").edit-btn Edit
+      div.edit-delete
+        if userId === comment.User.id
+        button(id=`comment-delete-${comment.id}` type="submit").delete-cmt-btn.edit-btn Delete
+        form(action=`/comments/${comment.id}/edit` method='get')
+          input(type='hidden' name='_csrf' value=csrfToken)
+          button(id=`comment-edit-${comment.id}` type="submit").edit-btn Edit
