--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,62 +1,94 @@
 h1 {
   color: #555555;
+  background: white;
 }
 
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
+  Helvetica, Arial, "Lucida Grande", sans-serif;
+  background: rgb(241,242,242);
+  background: linear-gradient(180deg, rgba(241,242,242,1) 50%, rgba(255,228,228,1) 90%) fixed;
+  background-size:cover;
+  background-repeat:no-repeat;
 }
 
 body {
-  background: rgb(255, 0, 220);
-  background: linear-gradient(
-    194deg,
-    rgba(255, 0, 220, 1) 43%,
-    rgba(0, 212, 255, 1) 91%
-  );
-  background-size: cover;
-  height: auto;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  /* background-image: url("../stylesheets/Splashpage.png"); */
+  /* height: auto; */
+  /* background-position: center; */
+  /* min-height: 100vh; */
+  /* display: flex; */
+  /* flex-direction: row-reverse; */
+  /* justify-content: space-evenly; */
+  /* margin-top: 300px;
+  /* margin-right: 150px; */
+  /* align-items: center; */
+  /* justify-content:center;
+  align-items: center; */
+  /* float: right;
+  /* margin: 15vw;
+  /* margin-top: 25vw; */
+  background-color: white;
+}
+
+#slogan{
+  float:right;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 110px;
+  /* margin-left: 300px; */
+  font-weight: bolder;
+}
+
+img{
+  width: 50%;
+  height: 50%;
+  float:right;
 }
 
 form {
   width: 100%;
   box-sizing: border-box;
   line-height: 10px;
+  background: white;
+  background-color: white ;
 }
 
 input {
+  border: 2px solid #d5d5d5;
+  background-color: white;
   box-sizing: border-box;
-  border-radius: 20px;
+  border-radius: 10px;
   color: rgba(0, 0, 0, 0.6);
   font-size: 18px;
   height: 100%;
   padding: 10px 15px;
   width: 100%;
-  border: 2px solid #d5d5d5;
 }
 
 #splash {
-  display: flex;
+  background: white;
+  background-color: white;
+  display:flex;
   align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  width: 428px;
+  flex-direction:column;
+  width: 350px;
+  border: 2px gray solid;
   height: fit-content;
-  left: 118px;
-  top: 205px;
-  padding: 50px;
+  /* left: 118px;
+  top: 300px; */
+  padding: 10px;
+  margin-top: 80px;
+  margin-left: 280px;
+  float: left;
 
-  background: #ffffff;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   border-radius: 30px;
 }
 
 button {
   border: 1px;
   color: white;
+  background: white;
   background-color: #00b7ff;
   border-radius: 35px;
   width: 120px;
@@ -66,6 +98,11 @@ button {
   font-size: 14px;
 }
 
+.form-control{
+  background: white;
+}
+
+
 button:hover {
   background-color: rgba(0, 213, 255, 0.692);
 }
@@ -73,6 +110,15 @@ button:hover {
 #splashbutton {
   display: flex;
   justify-content: center;
+  background: white;
+}
+
+.fielddiv{
+  background: white;
+}
+
+a{
+  background: white;
 }
 
 #errors {
