--- a/views/utils.pug
+++ b/views/utils.pug
@@ -8,7 +8,7 @@ mixin validationErrorSummary(errors)
           li= error
 
 mixin field(labelText, fieldName, fieldValue, fieldType = 'text')
-  div
+  div.fielddiv
     label(for=fieldName)= labelText
     if fieldType === 'textarea'
       textarea(id=fieldName name=fieldName class='form-control' rows='5')= fieldValue
