--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,5 +7,5 @@ html
         script(src='/javascripts/index.js' type='module')
   header
       include navBar
-  body
+  body.top
       block content
