--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -1,7 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap");
 
+.top {
+  margin-top: 53px;
+}
+
 body {
-  /* padding: 50px; */
+
   font-family: "Roboto", sans-serf;
   background-size: cover;
   /* height: auto; */
@@ -17,6 +21,7 @@ a {
 }
 
 * {
+  /* position:relative; */
   box-sizing: border-box;
   background-color: rgb(241, 242, 242);
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
@@ -39,12 +44,37 @@ body,
 header,
 nav {
   /* font-size: 1rem; */
-  color: inherit;
-  background-color: transparent;
+  /* color: inherit;
   margin: 0;
   padding: 0;
-  outline: 0;
+  outline: 0; */
+color: inherit;
+outline: 0;
+margin: 0;
+padding: 0;
+background-color: transparent;
+
 }
+
+#nav {
+  position:absolute;
+  top:0px;
+  left:0px;
+  width:100%;
+  background-color:white;
+  padding-bottom: 10px;
+  margin:0 auto;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav {
+    float: right;
+    display: block;
+  }
+}
+
+
+
 
 /* h1 {
   font-size: 2rem;
