--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap");
 
 .top {
-  margin-top: 53px;
+  margin-top: 59px;
 }
 
 body {
@@ -23,8 +23,8 @@ a {
 * {
   /* position:relative; */
   box-sizing: border-box;
-  /* background-color: rgb(241,242,242); */
-  background: linear-gradient(180deg, rgba(241,242,242,1) 50%, rgba(255,228,228,1) 90%) fixed;
+  background-color: rgb(241,242,242);
+  /* background: linear-gradient(180deg, rgba(241,242,242,1) 50%, rgba(255,228,228,1) 90%) fixed; */
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
   Helvetica, Arial, "Lucida Grande", sans-serif;
 }
@@ -40,8 +40,8 @@ ol,
 li,
 ul,
 span,
-div,
 body,
+div,
 header,
 nav {
   /* font-size: 1rem; */
@@ -302,8 +302,10 @@ label {
   text-decoration: none;
   /* border-bottom: 2px solid #d5d5d5; */
   display: flex;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:larger;
   align-content: space-between;
-  font-weight: bold;
+  /* font-weight: bold; */
   padding-top: 10px;
 }
 
