--- a/views/edit-answer.pug
+++ b/views/edit-answer.pug
@@ -11,5 +11,5 @@ block content
         br
         textarea.question-content(name='content' value=answer.content)=answer.content
       div.forminput
+        div
         button.add-question(type="submit") Submit
-
