--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,9 @@ html
       block content
         include utils.pug
         div#slogan
-          <span style="color: black">Sometimes you just gotta</span><span style="color: rgb(185, 43, 39)"> #askmom&dad</span>
+          <span style="color: black">Sometimes you just gotta</span>
+          br
+          <span style="color: rgb(185, 43, 39)"> #askmom&dad</span>
         img(src="../stylesheets/laptoprender.png")
         div#splash
           h1 Login
