--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap");
 
 .top {
-  margin-top: 59px;
+  margin-top: 50px;
 }
 
 body {
@@ -59,11 +59,12 @@ background-color: transparent;
 
 #nav {
   position:absolute;
+  font-weight: bold;
   top:0px;
   left:0px;
   width:100%;
   background-color:white;
-  padding-bottom: 10px;
+  /* padding-bottom: 10px; */
   margin:0 auto;
 }
 
@@ -130,9 +131,9 @@ nav li:hover {
 .logoutButton {
   background-color: white;
   color: rgb(185, 43, 39);
-  border: 2px solid rgb(185, 43, 39);
+  border: 1px solid rgb(185, 43, 39);
   border-radius: 50px;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .logoutButton:hover {
@@ -165,6 +166,7 @@ form {
 }
 
 textarea {
+  font-size: 14px;
   overflow-wrap: break-word;
   background-color: white;
   width: 300px;
@@ -180,37 +182,6 @@ input {
   border: 2px solid #d5d5d5;
   background-color: white;
 }
-
-/* select {
-  background-color: white;
-  box-sizing: border-box;
-  border-radius: 50px;
-  color: rgba(0, 0, 0, 0.6);
-  font-size: 14px;
-  padding: 5px 25px;
-  border: none;
-  border: 2px solid #d5d5d5;
-  background-color: white;
-  font-size: 12px;
-  padding: 10px 8px 10px 14px;
-  background: #fff;
-  border: 1px solid #ccc;
-  border-radius: 6px;
-  overflow: hidden;
-  position: relative;
-  background: white;
-  line-height: 1;
-  border: 0;
-  padding: 0;
-  border-radius: 0;
-  width: 120%;
-  position: relative;
-  z-index: 10;
-  width: 50%;
-  font-size: 1em;
-  background:url('arrow.png') no-repeat;
-  background-position:80% center;
-} */
 
 .forminput {
   padding-top: 10px;
@@ -406,7 +377,7 @@ label {
   padding: 10px;
   /* margin: 3px; */
   font-weight: lighter;
-  background: #ffffff;
+  background: transparent;
   box-sizing: border-box;
   border-radius: 3px;
 }
@@ -524,7 +495,8 @@ textarea {
   resize: none;
   border: 1px solid rgb(201, 201, 201);
   border-radius: 5px;
-  font-size: 12px;
+  font-family: "Roboto", sans-serif;
+  font-size: 15px;
   padding: 5px;
 }
 
@@ -540,7 +512,7 @@ textarea {
   margin: 10px;
   padding: 30px;
   border-radius: 3px;
-  height: 390px;
+  height: auto;
 }
 
 .question-content {
