--- a/views/edit-comment.pug
+++ b/views/edit-comment.pug
@@ -11,5 +11,5 @@ block content
         br
         textarea.question-content(name='content' value=comment.content)=comment.content
       div.forminput
+        div
         button.add-question(type="submit") Submit
-
