--- a/views/navBar.pug
+++ b/views/navBar.pug
@@ -1,11 +1,11 @@
-nav#nav.topnav
+nav#nav
     ul
         li: a#logo(href='/questions') ASKMOM&DAD
             //- img(src='https://i.imgur.com/22BqSWG.png')
         li: a(href='/questions/new') Add Question
         li: div
             form(action='/questions' method='post')
-                input(type="search" placeholder="Search..." name="term" required)
+                input(type="search" placeholder="🔎 Search..." name="term" required)
                 //- button(class="searchbutton" type="submit") Search
         li
             if locals.authenticated
