--- a/views/singleAnswer.pug
+++ b/views/singleAnswer.pug
@@ -18,7 +18,7 @@ block content
   div#comment-box
     form(action=`/answers/${answer.id}` method='post')
       input(type='hidden' name='_csrf' value=csrfToken)
-      textarea.answer-content(name='content' value=content placeholder='Type here...')
+      textarea.answer-content(name='content' value=content placeholder='Type here...' required)
       br
       button(type='submit').addanswerbutton Comment
   each comment in comments
