added required to a few fields and updated README

--- a/views/edit-answer.pug
+++ b/views/edit-answer.pug
@@ -9,7 +9,7 @@ block content
       input(type='hidden' name='_csrf' value=csrfToken)
       div
         br
-        textarea.question-content(name='content' value=answer.content)=answer.content
+        textarea.question-content(name='content' value=answer.content required)=answer.content
       div.forminput
         div
         button.add-question(type="submit") Submit
